tests/snapshots/tekenizer_tests__tekenizer_tests__tokenizer_lexer_string_template_1.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "template_start",
            raw: "`",
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: "template",
            raw: "a",
            span: Span {
                start: 1,
                end: 2,
            },
        },
        Token {
            kind: "template_start_expression",
            raw: "${",
            span: Span {
                start: 2,
                end: 4,
            },
        },
        Token {
            kind: "template_start",
            raw: "`",
            span: Span {
                start: 4,
                end: 5,
            },
        },
        Token {
            kind: "template",
            raw: "b",
            span: Span {
                start: 5,
                end: 6,
            },
        },
        Token {
            kind: "template_start_expression",
            raw: "${",
            span: Span {
                start: 6,
                end: 8,
            },
        },
        Token {
            kind: "string",
            raw: "c",
            span: Span {
                start: 9,
                end: 10,
            },
        },
        Token {
            kind: "template_close_expression",
            raw: "}",
            span: Span {
                start: 11,
                end: 12,
            },
        },
        Token {
            kind: "template",
            raw: "d",
            span: Span {
                start: 12,
                end: 13,
            },
        },
        Token {
            kind: "template_close",
            raw: "`",
            span: Span {
                start: 13,
                end: 14,
            },
        },
        Token {
            kind: "template_close_expression",
            raw: "}",
            span: Span {
                start: 14,
                end: 15,
            },
        },
        Token {
            kind: "template",
            raw: "e",
            span: Span {
                start: 15,
                end: 16,
            },
        },
        Token {
            kind: "template_close",
            raw: "`",
            span: Span {
                start: 16,
                end: 17,
            },
        },
    ],
)
