tests/snapshots/tekenizer_tests__tekenizer_tests__tokenizer_lexer_string_template_2.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "template",
            raw: "a$\\`b$\"c\"}d\\`}e",
            span: Span {
                start: 1,
                end: 16,
            },
        },
    ],
)
