tests/snapshots/tekenizer_tests__tekenizer_tests__tokenizer_lexer_template_1.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "template_start",
            raw: "`",
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: "template",
            raw: "abc",
            span: Span {
                start: 1,
                end: 4,
            },
        },
        Token {
            kind: "template_start_expression",
            raw: "${",
            span: Span {
                start: 4,
                end: 6,
            },
        },
        Token {
            kind: "numeric",
            raw: "3",
            span: Span {
                start: 6,
                end: 7,
            },
        },
        Token {
            kind: "template_close_expression",
            raw: "}",
            span: Span {
                start: 7,
                end: 8,
            },
        },
        Token {
            kind: "template",
            raw: "def",
            span: Span {
                start: 8,
                end: 11,
            },
        },
        Token {
            kind: "template_close",
            raw: "`",
            span: Span {
                start: 11,
                end: 12,
            },
        },
    ],
)
