tests/snapshots/tekenizer_tests__tekenizer_tests__tokenizer_lexer_template_2.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "template_start",
            raw: "`",
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: "template",
            raw: "abc\\${3}def",
            span: Span {
                start: 1,
                end: 12,
            },
        },
        Token {
            kind: "template_close",
            raw: "`",
            span: Span {
                start: 12,
                end: 13,
            },
        },
    ],
)
